{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Game",
            "id": "a2175133-0639-46e1-85f6-af389ba464f6",
            "actions": [
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "e1dc2b4b-9f42-4aef-8911-12736512847b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkillQ",
                    "type": "Button",
                    "id": "bfd0dbeb-7ca0-4e47-bd96-58cb6786a09d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkillE",
                    "type": "Button",
                    "id": "e2917fca-79e3-4182-bf7b-96c2ec7e5061",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkillR",
                    "type": "Button",
                    "id": "f0f3862b-e0cd-4e33-967e-fe7cc6fe6044",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PauseEditor",
                    "type": "Button",
                    "id": "fe54560b-7bd0-45b7-bf9c-f5d72f3ea0eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "dc59ae78-b565-45db-9c63-afd7d5a4a4a6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MainAttack",
                    "type": "Button",
                    "id": "d45a1719-ff0a-4fa6-8db8-b280e4a19447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpecialAttack",
                    "type": "Button",
                    "id": "e9c23c4d-a739-4ae0-8b74-c3ffdef73b6d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f1adefd3-de1e-472c-91ef-fa679fc13d88",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "480496d9-20ed-4a3b-aa66-3a330dd86c75",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4f81c151-9c8e-401c-af6d-9ef0e6de87d4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b4e89c35-f8dd-4f44-a58b-39945439141b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5191f12a-c6e1-4b4a-bed5-c256f95ec034",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "3997acb2-927d-40e6-9910-02eb38948d6b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillQ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b3fe82c4-6cfe-4cff-b764-8c513fbe9173",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseEditor",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea33ecec-6802-494f-9532-7a0b46e38fce",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec6c3874-581d-41f5-b5a9-07b89654ac68",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillE",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f9336bd-7f91-4611-a546-95a6244ef73c",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa95f088-fd79-42f1-a62f-715621b94816",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MainAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d9e2a57-7241-4427-8dc7-f980ecca1ac2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}